fix: toolbar spacing issues

--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -102,6 +102,7 @@ h4
 cyan-toolbar h1, cyan-toolbar h2, cyan-toolbar h3, cyan-toolbar h4
   line-height: 48px
   margin-bottom: 0
+  padding-top: 0px
   max-height: 48px
   white-space: nowrap
   overflow: hidden
